Fixed the majority of the website.

--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,6 @@
-<div class="hero" style="background-image: url('img/hero.png'); height: 400px; background-size: cover; background-position: center;"></div>
-
+<div class="hero-container">
+  <img src="img/hero.png" alt="Hero Image" class="hero-img">
+</div>
 
 The CSUCI Datathon is an incredible opportunity for High School and Community College students to dive into the world of data science alongside professionals! Participants will explore cutting-edge data science topics in engaging sessions, gain insider knowledge on what it’s really like to be a data scientist from our expert panel, and then put their skills to the test in a thrilling datathon challenge using a surprise dataset. With a full day of learning, competition, exciting prizes, delicious food, and more, this event promises to be both educational and unforgettable!
 
