--- a/index.qmd
+++ b/index.qmd
@@ -5,4 +5,13 @@
 The CSUCI Datathon is an incredible opportunity for High School and Community College students to dive into the world of data science alongside professionals! Participants will explore cutting-edge data science topics in engaging sessions, gain insider knowledge on what it’s really like to be a data scientist from our expert panel, and then put their skills to the test in a thrilling datathon challenge using a surprise dataset. With a full day of learning, competition, exciting prizes, delicious food, and more, this event promises to be both educational and unforgettable!
 
 
+Guest Logins:
+
+User: guest-datathon1 PW: Oliveactor40
+User: guest-datathon2 PW: Goldblob19
+User: guest-datathon3 PW: Loudfarm42
+User: guest-datathon4 PW: Messyspy47
+User: guest-datathon5 PW: Firstboot64
+User: guest-datathon6 PW: Giantjade11
+
 ![](/img/logo_2.png){align="center"}
