--- a/index.qmd
+++ b/index.qmd
@@ -1,13 +1,24 @@
+---
+toc: false
+---
+
 <div class="hero-container">
   <img src="img/hero.png" alt="Hero Image" class="hero-img">
 </div>
 
 The CSUCI Datathon is an incredible opportunity for High School and Community College students to dive into the world of data science alongside professionals! Participants will explore cutting-edge data science topics in engaging sessions, gain insider knowledge on what it’s really like to be a data scientist from our expert panel, and then put their skills to the test in a thrilling datathon challenge using a surprise dataset. With a full day of learning, competition, exciting prizes, delicious food, and more, this event promises to be both educational and unforgettable!
 
-::: {.callout-warning icon="false"}
+
+### Presentation
+
+{{< pdf CSUCI_Datathon.pdf >}}
+
+
+::: {.callout-tip icon="false"}
 ### Competition Data
 
-[Data Package](https://csuci-my.sharepoint.com/:u:/g/personal/isaac_quintanillasalinas_csuci_edu/ETOcmZfhgoRIlBCQX0zcBDgBbggctMgHZ3jEekb51oV2og?e=7k9jQr)
+[Data Package](https://csuci-my.sharepoint.com/:u:/g/personal/isaac_quintanillasalinas_csuci_edu/ETOcmZfhgoRIlBCQX0zcBDgBbggctMgHZ3jEekb51oV2og?e=FS57h4)
+
 
 Use CSV File: data_for_csuci_datathon_2014_2016.csv
 
@@ -16,20 +27,6 @@ Password: dolphins_2025
 :::
 
 
-
-Guest Logins:
-
-User: guest-datathon1 PW: Oliveactor40
-
-User: guest-datathon2 PW: Goldblob19
-
-User: guest-datathon3 PW: Loudfarm42
-
-User: guest-datathon4 PW: Messyspy47
-
-User: guest-datathon5 PW: Firstboot64
-
-User: guest-datathon6 PW: Giantjade11
 
 
 ![](/img/logo_2.png){align="center"}
