--- a/index.qmd
+++ b/index.qmd
@@ -47,6 +47,7 @@ Password: dolphins_2025
 ### Thank You to Our Supporters
 
 - California Education Learning Lab
+- National Parks Service
 - CSUCI Office of the Provost
 - CSUCI Department of Mathematics and Data Science
 
