--- a/index.qmd
+++ b/index.qmd
@@ -15,6 +15,8 @@ The CSUCI Datathon is an incredible opportunity for High School and Community Co
 {{< pdf CSUCI_Datathon.pdf >}}
 
 
+### Data
+
 ::: {.callout-tip icon="false"}
 ### Competition Data
 
