--- a/index.qmd
+++ b/index.qmd
@@ -12,7 +12,7 @@ The CSUCI Datathon is an incredible opportunity for High School and Community Co
 
 ### Presentation
 
-{{< pdf CSUCI_Datathon.pdf >}}
+{{< pdf CSUCI_Datathon.pdf download-link=false >}}
 
 
 ### Data
@@ -52,10 +52,6 @@ Data CSV File: data_for_csuci_datathon_2014_2016.csv
 - National Parks Service
 - CSUCI Office of the Provost
 - CSUCI Department of Mathematics and Data Science
-
-
-
-
 
 
 
